Fixed "login for live chat" not showing up on mobile

--- a/public/stylesheets/livechat.css
+++ b/public/stylesheets/livechat.css
@@ -11,22 +11,19 @@
   padding: 7px 6px 5px 6px;
 }
 .loginmsg{
-  text-decoration: none;
-  height: 49px;
-  width: 160px;
+  background-color:white!important;
+  width: 160px !important;
+  padding: 0px;
   padding-top: 8px;
-  position: fixed;
-  bottom: 5%;
-  right: 4.25%;
-  background-color: white;
-  border-radius: 25px;
-  border-style: solid;
-  border-width:2px;
-  background-color: white;
-  text-align: center;
+}
+.loginmsg:hover{
+  background-color: #00ffff!important;
+}
+#login_link:hover{
+  cursor: pointer;
 }
 
-.chat-box{
+.chat-box {
   background-color:lightgray;
   border-radius: 25px;
   border-style: solid;
